--- a/netos/css/style.css
+++ b/netos/css/style.css
@@ -222,7 +222,6 @@ h1.header {
     content: attr(data-date);
     text-align: right;
     font-weight: 200;
-
     font-size: 16px;
     min-width: 120px;
 }
@@ -236,6 +235,12 @@ h1.header {
     width: 12px;
     content: "";
     top: 5px;
+}
+
+.timeline-img{
+    height: 100%;
+    margin-top: 30px;
+    border-radius: 5px;
 }
 
 @media (max-width: 945px) {
