--- a/netos/css/style.css
+++ b/netos/css/style.css
@@ -14,16 +14,20 @@
 }
 
 html {
-    font-family: 'Roboto Condensed', sans-serif;
+    font-family: 'Ubuntu', sans-serif;
 }
 body{
-    font-size: 18px;
+    font-size: 16px;
     line-height: 28px;
     font-weight: 200;
 }
+p{
+    font-size: 16px;
+}
 
 h1 {
-    font-size: 46px;
+    font-size: 38px;
+    
 }
 h2 {
     font-size: 44px;
@@ -41,13 +45,14 @@ h5 {
 h6 {
     font-size: 20px;
 }
+
 .row{
     margin: 0;
 }
   
 #img-logo{
-    margin-top: 15px;
-    max-height: 34px;
+    margin-top: 20px;
+    max-height: 20px;
 }
 
 nav .nav-wrapper{
@@ -128,37 +133,44 @@ nav ul a.btn{
     }
 }
 #splash-logo{
-    max-height: 240px;
-    max-width: 240px;
-    margin-bottom: 185px;
+    max-height: 120px;
+    max-width: 120px;
+    margin-bottom: 44px;
 }
 .splash-item{
-    padding-top: 250px;
+
 }
-.customer-img{
-    max-height: 80px;
+
+#carrusel{
+    height: 250px!important;
+    margin-top: 30px;
+    margin-bottom: -70px;
 }
 
 .description{
     font-style: normal;
+    line-height: 20px;
     text-align: justify;
     font-weight: 200;
-    font-size: 20px;
+    font-size: 16px;
 }
 
 #section2{
 
 }
 
-#carrusel{
-    height: 560px!important;
-}
 
 .partners-img{
     max-height: 150px;
     max-width: 150px;
     vertical-align: middle;
 }
+.customers-img{
+    max-height: 100px;
+    max-width: 100px;
+    vertical-align: middle;
+}
+
 #partner-carousel{
     max-height: 350px;
 }
@@ -288,3 +300,86 @@ h1.header {
 }
 
 /**/
+.landing-container{
+    height: 87vh;
+    background-image: linear-gradient(to bottom right,#AFD6E3, #293770);
+ 
+    background-size: cover;
+}
+.landing-container:before{
+    background-image: url(../img/Fotos/adfg.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    z-index: 1;
+    opacity: 0.05;
+    content: '';
+    display: block;
+    position: absolute;
+    top: 64px;
+    bottom: 50px;
+    right: 0;
+    left: 0;
+}
+.landing-content{
+    font-family: 'Comfortaa', cursive;
+    display: block;
+    line-height: 100px;
+    margin-left: auto;
+    margin-right: auto;
+    text-align: center;
+    opacity: .9;
+    bottom: 50vh;
+}
+.landing-content h1{
+    margin: 0;
+    font-weight: 700;
+}
+.landing-content h2{
+    margin: 0;
+    font-weight: 300;
+    font-size: 28px;
+    padding-top: 3vh;
+}
+.landing-logo{
+    padding-top: 20vh;
+    max-height: 150px;
+    max-width: 150px;
+}
+#section0{
+    height: 15vh;
+}
+
+.comp-card{
+    background: white;
+    width: 300px;
+    display: inline-block;
+    margin: auto;
+    border-radius: 20px;
+    position: relative;
+    text-align: center;
+    z-index: 9999;
+}
+.comp-card--imagen{
+    position: relative;
+    height: 230px;
+    border-top-left-radius: 14px;
+    border-top-right-radius: 14px;
+    border-bottom-left-radius: 14px;
+    border-bottom-right-radius: 14px;
+}
+.comp-card--imagen_minas{
+    /*background: linear-gradient(to bottom right, #eacda3, #FFB347);*/
+}
+.comp-card--imagen_desarrollo{
+    /*background: linear-gradient(to bottom, #ACE2F3, #75D2EF);*/
+}
+.comp-card--imagen_energia{
+    /*background: linear-gradient(to bottom right,#B6E974, #99DC74);*/
+}
+.comp-card--imagen img{
+    width: 200px;
+    position: absolute;    
+    top: 10px;
+    left: 50px;
+}
